[project]
name = "stock"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Iztok Bajcar", email = "ib8548@student.uni-lj.si" }]
dependencies = [
    "pymongo>=4.10.1",
    "uvicorn>=0.32.0",
    "fastapi>=0.115.3",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
    "tox>=4.23.2",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "requests>=2.32.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
api = { cmd = "src/rso_stock/api.py", env = { "PYTHONPATH" = "src" } }
test = "tox"

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.tox]
legacy_tox_ini = """
[tox]
env_list = py{311},lint

[testenv]
groups = dev
commands =
    pytest --cov tests
deps =
    pytest
    pytest-cov

[testenv:lint]
groups = lint
commands =
    ruff check src tests
deps =
    ruff"""
